<resources>
    <string name="app_name">MJM Konstruct &amp; Management Inc.</string>
    <string name="base_url">"http://servicemjm-env.ap-southeast-1.elasticbeanstalk.com/"</string>

    <!-- Strings related to login -->
    <!--<string name="app_name">Sign In&amp;Up</string>-->
    <!--<string name="action_settings">Settings</string>-->
    <string name="hello_world">Hello world!</string>
    <string name="remove">Remove</string>

    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>

    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="logo">MJM Logo</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--<string name="title_activity_main">Dashboard</string>-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="title_dashboard_main">Dashboard</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_dashboard">Home</string>
    <string name="title_activity_tasks">Tasks</string>
    <string name="title_activity_projects">Projects</string>
    <string name="title_activity_files">Files</string>
    <string name="title_activity_reports">Reports</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="Dashboard">Home</string>
    <string name="Files">Files</string>
    <string name="Projects">Projects</string>
    <string name="Reports">Reports</string>
    <string name="Schedule">Schedule</string>
    <string name="Tasks">Tasks</string>
    <string name="title_activity_forms">Purchase Request</string>
    <string name="Forms">Purchase Request</string>
    <string name="title_activity_users">Users</string>
    <string name="Users">Users</string>
    <string name="title_activity_add_userr">User</string>
    <string name="title_activity_add_task">Task</string>
    <string name="title_activity_add_project">Project</string>
    <string name="title_activity_add_purchase_request">Purchase Request</string>
    <string name="title_activity_add_purchase_order">Purchase Order</string>
    <string name="title_activity_add_project_team">Project Team</string>
    <string name="title_activity_project_team">Project Team</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_purchase_order">Purchase Order</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="projectname">Project Name</string>
    <string name="title_activity_settings">Settings</string>
    <string name="splashtext">MJM Konstruct &amp; Management Inc.</string>
    <string name="title_task">Task</string>
    <string name="title_team">Team</string>
    <string name="title_workflow">Workflow</string>
    <string name="title_pr">Purchase Request</string>
    <string name="title_po">Purchase Order</string>
    <string name="title_attendance">Attendance</string>
    <string name="title_activity_workers">Workers</string>
    <string name="title_activity_workflow">Workflow</string>

    <string name="DialogItem">Item</string>
    <string name="DialogQuantity">Qty</string>
    <string name="DialogAmount">Amount</string>
    <string name="title_activity_add_prequest">Purchase Request</string>
    <string name="tab_text_1">Purchase Request</string>
    <string name="tab_text_2">Purchase Order</string>
    <string name="tab_text_3">Add Item</string>
    <string name="tab_text_preq1">Approval</string>
    <string name="tab_text_preq2">Show Items</string>
    <string name="tab_text_preq3">Add Item</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab1">Project Team</string>
    <string name="tab2">Time In</string>
    <string name="tab3">Time Out</string>
    <string name="team">Users</string>
    <string name="workers">Attendannce</string>

    <string name="tab11">Tasks</string>
    <string name="tab12">Project Team</string>
    <string name="tab15">Worker</string>
    <string name="tab13">PR</string>
    <string name="tab14">PO</string>
    <string name="workflow">Workflow</string>


    <string name="title_file_list">Files</string>
    <string name="title_file_detail">File Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dismiss">Dismiss</string>
    <string name="save">Save</string>
    <string name="title_activity_form">Form</string>
    <string name="task_assigned">Assigned Workers</string>

</resources>
