<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.mjm.workflowkami.impl_classes.Workflow">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_workflow"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/workflow">
        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs_workflow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tasks" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab13" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab14" />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container_workflow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </android.support.v4.view.ViewPager>

    <include layout="@layout/content_workflow" />

</android.support.design.widget.CoordinatorLayout>
