<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="com.example.jasper.capstone.impl_classes.LoginActivity"
    android:weightSum="1">


    <!-- Login progress -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="238dp"
        android:layout_height="132dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        android:padding="25dp"
        android:src="@drawable/logo"
        android:layout_weight="0.37" />

    <TextView
        android:id="@+id/txtSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textAlignment="center"
        android:textSize="15pt"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorAccent"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold|normal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="20dp"/>


    <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/login_form"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.10">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->
            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="287dp"
                android:inputType="textEmailAddress"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="14dp"
                android:layout_weight="0.23"

                android:drawableLeft="@drawable/ic_id"
                android:drawablePadding="20dp"
                android:ems="12"
                android:hint="@string/prompt_email"
                android:singleLine="true" />
            <!--android:background="@drawable/rounded_pass"-->
            <!--<Space-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="10dp"/>-->

            <!--&lt;!&ndash;<EditText&ndash;&gt;-->
            <!--&lt;!&ndash;android:id="@+id/txtUserName"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="50dp"&ndash;&gt;-->
            <!--&lt;!&ndash;android:hint="@string/prompt_username"&ndash;&gt;-->
            <!--&lt;!&ndash;android:drawableLeft="@drawable/ic_menu_user"&ndash;&gt;-->
            <!--&lt;!&ndash;android:drawablePadding="20dp"&ndash;&gt;-->
            <!--&lt;!&ndash;android:inputType="textEmailAddress"&ndash;&gt;-->
            <!--&lt;!&ndash;android:maxLines="1"&ndash;&gt;-->
            <!--&lt;!&ndash;android:background="@drawable/rounded_uname"&ndash;&gt;-->
            <!--&lt;!&ndash;android:singleLine="true" />&ndash;&gt;-->

            <!--</android.support.design.widget.TextInputLayout>-->


            <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="287dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="4dp"

                android:drawableLeft="@drawable/ic_lock_out"
                android:drawablePadding="20dp"
                android:ems="12"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_weight="0.05" />
            <!--</android.support.design.widget.TextInputLayout>-->
            <!--android:background="@drawable/rounded_pass"-->
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="267dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/roundedbutton"
                android:drawablePadding="1dp"
                android:text="@string/action_sign_in"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:onClick="singInButtonOnClick"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
